[gd_scene load_steps=9 format=3 uid="uid://bnuyb0p8l4syw"]

[ext_resource type="Script" path="res://Scenes/Die.gd" id="1_7np7b"]
[ext_resource type="Shader" path="res://Materials/SilhouetteGlow.gdshader" id="2_btk8p"]
[ext_resource type="PackedScene" uid="uid://dwykr8euvxcab" path="res://Meshes/basic_die.glb" id="2_m3mmb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_882w2"]
render_priority = 1
shader = ExtResource("2_btk8p")
shader_parameter/outline_width = 2.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_uuaq3"]
next_pass = SubResource("ShaderMaterial_882w2")
transparency = 1
albedo_color = Color(1, 1, 1, 0)

[sub_resource type="BoxMesh" id="BoxMesh_052ak"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_uuaq3")
size = Vector3(0.55, 0.55, 0.55)

[sub_resource type="BoxShape3D" id="BoxShape3D_y2ss1"]
size = Vector3(0.5, 0.5, 0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_amd6i"]
size = Vector3(0.5, 0.01, 0.5)

[node name="Die" type="RigidBody3D"]
mass = 4.67
freeze = true
script = ExtResource("1_7np7b")

[node name="basic_die" parent="." instance=ExtResource("2_m3mmb")]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("BoxMesh_052ak")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_y2ss1")

[node name="FaceDetectorRaycast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
top_level = true
collide_with_areas = true
collide_with_bodies = false

[node name="FaceArea1" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="FaceArea1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0)
shape = SubResource("BoxShape3D_amd6i")

[node name="FaceArea2" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="FaceArea2"]
transform = Transform3D(1, 0, 0, 0, -0.000366493, 1, 0, -1, -0.000366493, 0, 0, -0.25)
shape = SubResource("BoxShape3D_amd6i")

[node name="FaceArea3" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="FaceArea3"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0.25, 0, 0)
shape = SubResource("BoxShape3D_amd6i")

[node name="FaceArea4" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="FaceArea4"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, -0.25, 0, 0)
shape = SubResource("BoxShape3D_amd6i")

[node name="FaceArea5" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="FaceArea5"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0.25)
shape = SubResource("BoxShape3D_amd6i")

[node name="FaceArea6" type="Area3D" parent="."]
input_ray_pickable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="FaceArea6"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.25, 0)
shape = SubResource("BoxShape3D_amd6i")

[connection signal="input_event" from="." to="." method="_on_input_event"]
